worked out the zoom / grid layout issue that vexed me for hours and misc. content changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
   background-position: center, center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 6rem 2rem;
+  padding: 8rem 2rem;
 }
 
 .about,
@@ -77,4 +77,29 @@ a:hover {
 
 img {
   border: 1px solid var(--lightBlue);
+}
+
+.gallery {  
+  --s: 150px; /* controls the size */
+  --g: 10px;  /*controls the gap */
+  --f: 1.5; /* controls the scale factor */
+
+  display: grid;
+  gap: var(--g);
+  width: calc(3*var(--s) + 2*var(--g)); /* 3 times the size plus 2 times the gap */
+  aspect-ratio: 1;
+  grid-template-columns: repeat(3, auto);
+}
+
+.gallery > img {
+  width: 0;
+  height: 0;
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+}
+
+.gallery img:hover{
+  width:  calc(var(--s) * var(--f));
+  height: calc(var(--s) * var(--f));
 }
